Added user registration for driver
